[gd_scene load_steps=7 format=3 uid="uid://w488bdaprsmf"]

[ext_resource type="Script" path="res://Scripts/Player/GrappleBeam.gd" id="1_4jt7g"]
[ext_resource type="PackedScene" uid="uid://bf6paa6jd0gs6" path="res://Resources/GameObjects/target_finder.tscn" id="1_t3nlx"]
[ext_resource type="Texture2D" uid="uid://dgoa6gyl7c63w" path="res://icon.svg" id="3_g1bfq"]
[ext_resource type="AudioStream" uid="uid://3u82kqfm6fbt" path="res://Sounds/SFX/Player/pla_beam_shoot.wav" id="4_hjtoj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xvyy2"]
radius = 160.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rg5bj"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_hjtoj")
stream_0/weight = 1.0

[node name="GrappleBeam" type="Node2D" node_paths=PackedStringArray("target_finder", "shoot_buffer")]
script = ExtResource("1_4jt7g")
target_finder = NodePath("TargetFinder")
shoot_buffer = NodePath("ShootBuffer")

[node name="TargetFinder" parent="." instance=ExtResource("1_t3nlx")]
collision_layer = 1

[node name="CollisionShape2D" parent="TargetFinder" index="2"]
shape = SubResource("CircleShape2D_xvyy2")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.196078, 0.764706, 1, 1)
joint_mode = 2
begin_cap_mode = 2
antialiased = true

[node name="Marker2D" type="Marker2D" parent="."]

[node name="DebugSprite" type="Sprite2D" parent="Marker2D"]
visible = false
scale = Vector2(0.13, 0.13)
texture = ExtResource("3_g1bfq")

[node name="AimArrow" type="Marker2D" parent="."]
visible = false

[node name="DebugSprite" type="Sprite2D" parent="AimArrow"]
visible = false
scale = Vector2(0.13, 0.13)
texture = ExtResource("3_g1bfq")

[node name="ColorRect" type="ColorRect" parent="AimArrow"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.366519
pivot_offset = Vector2(5, 5)
color = Color(0.196078, 0.764706, 1, 1)

[node name="ShootBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rg5bj")
volume_db = 16.264
bus = &"SFX"

[node name="ContactSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 16.264
bus = &"SFX"

[node name="ReleaseSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 16.264
bus = &"SFX"

[editable path="TargetFinder"]
